# phosphor-hwmon

sensor-monitoring/: Makefile.am  data_types.hpp  events.hpp  functor.cpp  functor.hpp  gen-sensor-group-defs.py  generate.sh  generated.cpp  main.cpp  monitor.cpp  monitor.hpp  phosphor-sensor-monitor
sensor-monitoring/example/: sensor_monitoring_defs.yaml
